[package]
name = "qdo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sled = "0.34.7"
tera = "1.20.0"
uuid = { version = "1.18.1", features = ["v5"] }
